# DNNsim

./: .gitignore  .project  CMakeLists.txt  README.md  cxxopts.h  example1.cpp  main.cpp
DRAMSim2/: system.ini
DRAMSim2/ini/: DDR4_2400.ini  DDR4_3200.ini
DRAMSim2/results_baseline/DNNsim_alexnet-ss/DDR3_micron_32M_8B_x4_sg125/: 8GB.2Ch.4R.scheme2.open_page.32TQ.32CQ.RtB.pRank.vis
DRAMSim2/results_baseline/DNNsim_eyeriss_alexnet/DDR3_micron_32M_8B_x4_sg125/: 8GB.2Ch.4R.scheme2.open_page.32TQ.32CQ.RtB.pRank.vis
DRAMSim2/results_baseline/DNNsim_eyeriss_googlenet/DDR3_micron_32M_8B_x4_sg125/: 8GB.2Ch.4R.scheme2.open_page.32TQ.32CQ.RtB.pRank.vis
DRAMSim2/results_baseline/DNNsim_googlenet-ss/DDR3_micron_32M_8B_x4_sg125/: 8GB.2Ch.4R.scheme2.open_page.32TQ.32CQ.RtB.pRank.vis
DRAMSim2/results_baseline/DNNsim_sparse_resnet/DDR3_micron_32M_8B_x4_sg125/: 8GB.2Ch.4R.scheme2.open_page.32TQ.32CQ.RtB.pRank.vis
base/: CMakeLists.txt
base/include/base/: Array.h  Layer.h  NetReader.h  Network.h  cnpy.h
base/src/: Array.cpp  NetReader.cpp  cnpy.cpp
cnpy/: CMakeLists.txt
cnpy/include/cnpy/: Array.h  NumpyArray.h  cnpy.h
cnpy/src/: Array.cpp  NumpyArray.cpp  cnpy.cpp
core/: CMakeLists.txt
core/include/core/: Architecture.h  BitFusion.h  BitPragmatic.h  BitTactical.h  BitTacticalE.h  BitTacticalP.h  BitTactical_e.h  BitTactical_p.h  Composer.h  Control.h  ConvolutionalLayer.h  DRAM.h  DaDianNao.h  Dataflow.h  DynamicStripes.h  DynamicStripesFP.h  DynamicTactical.h  EvictionPolicy.h  FIFO.h  FullyConnectedLayer.h  GlobalBuffer.h  Inference.h  InferenceSimulator.h  LRU.h  Laconic.h  Layer.h  LocalBuffer.h  Loom.h  Memory.h  Network.h  OutputStationary.h  PPU.h  Parallel.h  SCNN.h  SCNNe.h  SCNNp.h  ShapeShifter.h  Simulator.h  Stripes.h  TensorDash.h  (+3 more)
core/src/: BitFusion.cpp  BitPragmatic.cpp  BitTactical.cpp  BitTacticalE.cpp  BitTacticalP.cpp  BitTactical_e.cpp  BitTactical_p.cpp  Composer.cpp  Control.cpp  ConvolutionalLayer.cpp  DRAM.cpp  DaDianNao.cpp  Dataflow.cpp  DynamicStripes.cpp  DynamicStripesFP.cpp  DynamicTactical.cpp  FIFO.cpp  FullyConnectedLayer.cpp  GlobalBuffer.cpp  Inference.cpp  InferenceSimulator.cpp  LRU.cpp  Laconic.cpp  LocalBuffer.cpp  Loom.cpp  Memory.cpp  Network.cpp  OutputStationary.cpp  PPU.cpp  Parallel.cpp  SCNN.cpp  SCNNe.cpp  SCNNp.cpp  ShapeShifter.cpp  Simulator.cpp  Stripes.cpp  TensorDash.cpp  TimingSimulator.cpp  Utils.cpp  WindowFirstOutS.cpp
doc/: Doxyfile.in
examples/: README  README.md  SCNN_example  inference_example  simulator_example  training_example  transform_example
examples/BitFusion/: BitFusion_example  README.md
examples/BitPragmatic/: BitPragmaticDiffy_example  BitPragmatic_example  BitTacticalE_example  README.md
examples/BitTactical/: BitTacticalE_example  BitTacticalP_example  README.md  Schedule_example
examples/DaDianNao/: BitTactical_example  DaDianNao_example  README.md
examples/DynamicStripes/: DynamicStripes_example  README.md
examples/Laconic/: Laconic_example  README.md
examples/Loom/: Loom_example  README.md
examples/None/: None_example  README.md
examples/Parallel/: BitTactical_example  Parallel_example  README.md
examples/SCNN/: README.md  SCNN_example
examples/SCNNx/: README.md  SCNNe_example  SCNNp_example
examples/ShapeShifter/: BitTacticalP_example  README.md  ShapeShifterDiffy_example  ShapeShifter_example
examples/Stripes/: README.md  Stripes_example
examples/TensorDash/: README.md  TensorDash_example
interface/: CMakeLists.txt
interface/include/interface/: Interface.h  NetReader.h  NetWriter.h  StatsWriter.h
interface/proto/: caffe.proto  network.proto
interface/src/: NetReader.cpp  NetWriter.cpp  StatsWriter.cpp
loader/: CMakeLists.txt  cnpy.cpp  cnpy.h  main.cpp
loader/include/loader/: NetLoader.h  NumpyLoader.h
loader/src/: NetLoader.cpp  NumpyLoader.cpp
proto/: CMakeLists.txt  batch.proto  network.proto  schedule.proto  scheduler.proto
scripts/: save_net.py
sys/: CMakeLists.txt
sys/include/sys/: Batch.h  Statistics.h  Stats.h  common.h
sys/src/: Batch.cpp  Statistics.cpp  Stats.cpp
